--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "scripts": {
     "test": "standard && ava"
   },
+  "engines": {
+    "node": ">=6.0.0",
+  },
   "devDependencies": {
     "ava": "^0.25.0",
     "standard": "^11.0.0"
