--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test": "standard && ava"
   },
   "engines": {
-    "node": ">=6.0.0",
+    "node": ">=6.0.0"
   },
   "devDependencies": {
     "ava": "^0.25.0",
